--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -10,6 +10,21 @@ jobs:
   laravel-tests:
     runs-on: ubuntu-latest
 
+    services:
+      mysql:
+        image: mysql:5.7
+        env:
+          MYSQL_ROOT_PASSWORD: root
+          MYSQL_DATABASE: testing_db
+          MYSQL_USER: root
+        ports:
+          - 3306:3306
+        options: >-
+          --health-cmd="mysqladmin ping --silent"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=3
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -18,7 +33,7 @@ jobs:
       uses: shivammathur/setup-php@2.21.0
       with:
         php-version: '8.0'
-        extensions: mbstring, xml, bcmath, pdo_sqlite
+        extensions: mbstring, xml, bcmath, pdo_mysql
         coverage: xdebug
 
     - name: Install Dependencies
@@ -35,16 +50,22 @@ jobs:
         sudo chown -R $USER:$USER storage bootstrap/cache
         chmod -R 755 storage bootstrap/cache
 
-    - name: Create Database
+    - name: Configure Database
       run: |
-        mkdir -p database
-        touch database/database.sqlite
+        sed -i "s/DB_CONNECTION=mysql/DB_CONNECTION=mysql/" .env
+        sed -i "s/DB_HOST=127.0.0.1/DB_HOST=127.0.0.1/" .env
+        sed -i "s/DB_PORT=3306/DB_PORT=3306/" .env
+        sed -i "s/DB_DATABASE=homestead/DB_DATABASE=testing_db/" .env
+        sed -i "s/DB_USERNAME=root/DB_USERNAME=root/" .env
+        sed -i "s/DB_PASSWORD=/DB_PASSWORD=root/" .env
 
     - name: Run Migrations
       run: php artisan migrate
 
     - name: Run Tests
       env:
-        DB_CONNECTION: sqlite
-        DB_DATABASE: database/database.sqlite
+        DB_CONNECTION: mysql
+        DB_DATABASE: testing_db
+        DB_USERNAME: root
+        DB_PASSWORD: root
       run: php artisan test
