--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -8,64 +8,28 @@ on:
 
 jobs:
   laravel-tests:
+
     runs-on: ubuntu-latest
 
-    services:
-      mysql:
-        image: mysql:5.7
-        env:
-          MYSQL_ROOT_PASSWORD: root
-          MYSQL_DATABASE: testing_db
-          MYSQL_USER: root
-        ports:
-          - 3306:3306
-        options: >-
-          --health-cmd="mysqladmin ping --silent"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=3
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Setup PHP
-      uses: shivammathur/setup-php@2.21.0
+    - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
       with:
         php-version: '8.0'
-        extensions: mbstring, xml, bcmath, pdo_mysql
-        coverage: xdebug
-
-    - name: Install Dependencies
-      run: composer install --prefer-dist --no-progress --no-suggest --no-interaction --no-ansi
-
+    - uses: actions/checkout@v4
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-
-    - name: Generate Application Key
+    - name: Install Dependencies
+      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+    - name: Generate key
       run: php artisan key:generate
-
-    - name: Set Directory Permissions
+    - name: Directory Permissions
+      run: chmod -R 777 storage bootstrap/cache
+    - name: Create Database
       run: |
-        sudo chown -R $USER:$USER storage bootstrap/cache
-        chmod -R 755 storage bootstrap/cache
-
-    - name: Configure Database
-      run: |
-        sed -i "s/DB_CONNECTION=mysql/DB_CONNECTION=mysql/" .env
-        sed -i "s/DB_HOST=127.0.0.1/DB_HOST=127.0.0.1/" .env
-        sed -i "s/DB_PORT=3306/DB_PORT=3306/" .env
-        sed -i "s/DB_DATABASE=homestead/DB_DATABASE=testing_db/" .env
-        sed -i "s/DB_USERNAME=root/DB_USERNAME=root/" .env
-        sed -i "s/DB_PASSWORD=/DB_PASSWORD=root/" .env
-
-    - name: Run Migrations
-      run: php artisan migrate
-
-    - name: Run Tests
+        mkdir -p database
+        touch database/database.sqlite
+    - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
       env:
-        DB_CONNECTION: mysql
-        DB_DATABASE: testing_db
-        DB_USERNAME: root
-        DB_PASSWORD: root
+        DB_CONNECTION: sqlite
+        DB_DATABASE: database/database.sqlite
       run: php artisan test
