--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,15 +1,15 @@
+
 name: Laravel
 
 on:
   push:
-    branches:
-      - master
+    branches: [ "master" ]
   pull_request:
-    branches:
-      - master
+    branches: [ "master" ]
 
 jobs:
   laravel-tests:
+
     runs-on: ubuntu-latest
 
     steps:
@@ -21,18 +21,16 @@ jobs:
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install Dependencies
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-    - name: Generate Key
+    - name: Generate key
       run: php artisan key:generate
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
-    - name: Configure Database
+    - name: Create Database
       run: |
-        sed -i "s/DB_CONNECTION=mysql/DB_CONNECTION=sqlite/" .env
-        sed -i "s/DB_DATABASE=.*/DB_DATABASE=:memory:/" .env
-    - name: Run Fresh Migrations
-      run: php artisan migrate:fresh
-    - name: Execute Tests
+        mkdir -p database
+        touch database/database.sqlite
+    - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
       env:
         DB_CONNECTION: sqlite
-        DB_DATABASE: :memory:
+        DB_DATABASE: database/database.sqlite
       run: php artisan test
