--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -27,11 +27,11 @@ jobs:
     - name: Create Database
       run: |
         mkdir -p database
-        touch database/task_manger.sqlite
+        touch database/database.sqlite
     - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
       env:
         DB_CONNECTION: sqlite
-        DB_DATABASE: database/task_manger.sqlite
+        DB_DATABASE: database/database.sqlite
         DB_USER: root
 
       run: php artisan test
