--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,33 +1,58 @@
-name: Laravel
-
 on:
   push:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
-
+  
+name: Laravel CI
 jobs:
-  laravel-tests:
-
+  phpunit:
     runs-on: ubuntu-latest
-
+    defaults:
+      run:
+        working-directory: ./laravel
+ 
+    services:
+      mysql:
+        image: mysql:5.7
+        env:
+          MYSQL_USER: user
+          MYSQL_PASSWORD: secret
+          MYSQL_DATABASE: testdatabase
+          MYSQL_ROOT_PASSWORD: root
+          DB_PORT: ${{ job.services.mysql.ports[3306] }}
+        ports:
+          - 33306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+ 
     steps:
-    - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
+    - uses: actions/checkout@v1
       with:
-        php-version: '8.0'
-    - uses: actions/checkout@v4
-    - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-    - name: Install Dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-    - name: Generate key
-      run: php artisan key:generate
-    - name: Directory Permissions
-      run: chmod -R 777 storage bootstrap/cache
-    - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
+        fetch-depth: 1
+
+    - name: Verify MySQL connection
+      run: |
+        mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports['3306'] }} -uuser -psecret -e "SHOW DATABASES"
+   
+    - name: Install dependencies
+      run: |
+        php --version
+        composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
+        chmod -R 777 storage bootstrap/cache
+
+    - name: Boot Laravel application
+      run: |
+        php -r "file_exists('.env') || copy('.env.example', '.env');"
+        php artisan key:generate
+        php artisan --version
+
+    - name: Execute PHPUnit tests
       env:
         DB_CONNECTION: mysql
-        DB_DATABASE: task_manger
+        DB_DATABASE: testdatabase
+        DB_PORT: 33306
         DB_USER: root
-
-      run: php artisan test
+        DB_PASSWORD: secret
+      run: |
+        php artisan migrate:fresh --seed
+        ./vendor/bin/phpunit 
