--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -30,9 +30,9 @@ jobs:
       with:
         fetch-depth: 1
 
-    - name: Verify MySQL connection
-      run: |
-        mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports['3306'] }} -uuser -psecret -e "SHOW DATABASES"
+    # - name: Verify MySQL connection
+    #   run: |
+    #     mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports['3306'] }} -uuser -psecret -e "SHOW DATABASES"
    
     - name: Install dependencies
       run: |
