--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -34,10 +34,9 @@ jobs:
     #   run: |
     #     mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports['3306'] }} -uuser -psecret -e "SHOW DATABASES"
    
-    - name: Install dependencies
-      run: |
-        composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
-
+    - name: Install Dependencies
+      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+      
     - name: Boot Laravel application
       run: |
         php -r "file_exists('.env') || copy('.env.example', '.env');"
