--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -18,7 +18,7 @@ jobs:
         env:
           MYSQL_USER: user
           MYSQL_PASSWORD: secret
-          MYSQL_DATABASE: testdatabase
+          MYSQL_DATABASE: task_manger
           MYSQL_ROOT_PASSWORD: root
           DB_PORT: ${{ job.services.mysql.ports[3306] }}
         ports:
@@ -47,7 +47,7 @@ jobs:
     - name: Execute PHPUnit tests
       env:
         DB_CONNECTION: mysql
-        DB_DATABASE: testdatabase
+        DB_DATABASE: task_manger
         DB_PORT: 33306
         DB_USER: root
         DB_PASSWORD: secret
