--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,17 +1,18 @@
+name: Laravel CI
+
 on:
   push:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
-  
-name: Laravel CI
+
 jobs:
   phpunit:
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: ./laravel
- 
+
     services:
       mysql:
         image: mysql:5.7
@@ -24,25 +25,26 @@ jobs:
         ports:
           - 33306:3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
- 
+
     steps:
     - uses: actions/checkout@v1
       with:
         fetch-depth: 1
 
-    # - name: Verify MySQL connection
-    #   run: |
-    #     mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports['3306'] }} -uuser -psecret -e "SHOW DATABASES"
-   
-    - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+    - name: Ensure .env file
+      run: |
+        if [ ! -f .env ]; then
+          cp .env.example .env
+        fi
+
     - name: Install Dependencies
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+
     - name: Generate key
       run: php artisan key:generate
+
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
-      
 
     - name: Execute PHPUnit tests
       env:
@@ -53,4 +55,4 @@ jobs:
         DB_PASSWORD: secret
       run: |
         php artisan migrate:fresh --seed
-        ./vendor/bin/phpunit 
+        ./vendor/bin/phpunit
